welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: not found: value Nbb
	if (Nbb>=3) {
            ^Poucet:13: error: not found: value Nbb
	else if (Nbb<=2) {
                 ^